--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.5
-	yarn_mappings=1.16.5+build.1
+	minecraft_version=1.17.1
+	yarn_mappings=1.17.1+build.63
 	loader_version=0.11.0
 
 # Mod Properties
+	mod_version = 1.2.0-alpha
 	maven_group = hibiii
 	archives_base_name = windchimes
 
