Fix code for 1.17

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,13 @@ org.gradle.jvmargs=-Xmx1G
 	# check these on https://fabricmc.net/use
 	minecraft_version=1.17.1
 	yarn_mappings=1.17.1+build.63
-	loader_version=0.11.0
+	loader_version=0.12.5
 
 # Mod Properties
-	mod_version = 1.2.0-alpha
+	version = 1.2.0-alpha
 	maven_group = hibiii
 	archives_base_name = windchimes
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.29.3+1.16
+	fabric_version=0.42.1+1.17
