--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.12.5
 
 # Mod Properties
-	version = 1.2.0-alpha
+	mod_version = 1.2.0-alpha
 	maven_group = hibiii
 	archives_base_name = windchimes
 
