--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.19
-	yarn_mappings=1.19+build.1
-	loader_version=0.14.7
+	minecraft_version=1.19.3-rc3
+	yarn_mappings=1.19.3-rc3+build.1
+	loader_version=0.14.10
 
 # Mod Properties
-	mod_version = 1.2.1
+	mod_version = 1.2.2
 	maven_group = hibiii
 	archives_base_name = windchimes
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.55.3+1.19
+	fabric_version=0.68.1+1.19.3
