--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,7 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.19.3-rc3
-	yarn_mappings=1.19.3-rc3+build.1
-	loader_version=0.14.10
-
 # Mod Properties
-	mod_version = 1.2.2
+	version = 1.2.3
 	maven_group = hibiii
 	archives_base_name = windchimes
-
-# Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.68.1+1.19.3
